<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Whizzy</string>
    <string name="whizzy">Whizzy</string>
    <string name="ok">OK</string>
    <string name="save_ok">Save and OK</string>
    <string name="permission_read_phone_state">Phone permission is needed to make phone calls</string>
    <string name="permission_available_phone_state">Phone state Permission has been granted</string>
    <string name="permission_available_contacts">Contacts Permissions have been granted. Contacts screen can now be opened.</string>
    <string name="permission_available_location">Location Permissions have been granted</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_phone_state_rationale">Phone permission is needed to make phone calls</string>
    <string name="permission_location_rationale">Location permission is needed to locate you on map and show you near by vehicles</string>
    <string name="permission_contacts_rationale">Contacts permissions are needed to demonstrate access.</string>
    <string name="permission_phone_contacts_rationale">Phone Contacts permission is needed to display all Phone Contacts</string>
    <string name="permission_available_contacs">Contacts Permissions have been granted</string>
    <string name="permission_external_storage_rationale">External storage permission is needed to store your media files</string>
    <string name="permission_available_external_storage">External storage Permissions have been granted</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="your_trips">My Requests</string>
    <string name="payments">Payments</string>
    <string name="notifications">Notifications</string>
    <string name="refer_friend">Refer a friend</string>
    <string name="legal">Legal</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact us</string>
    <string name="become_driver">Become a driver</string>
    <string name="about">About</string>
    <string name="empty" />
    <string name="title_activity_maps">Map</string>
    <string name="pick_up_location">Pickup Location</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_off_location">Dropoff Location</string>
    <string name="search_location">Search Location</string>
    <string name="add_home">Add Home</string>
    <string name="add_location">Add Location</string>
    <string name="tag_location">Location</string>
    <string name="recent">Recent</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_name">Your Name</string>
    <string name="number">Number</string>
    <string name="email">E-Mail (optional)</string>
    <string name="prior">+91</string>
    <string name="confirm">Submit</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="payment_required">Payment Required</string>
    <string name="contact_number">Number</string>
    <string name="contact_number1">Contact number</string>
    <string name="pick_up_contact">Pick Up Details</string>
    <string name="contact_name">Name</string>
    <string name="contact_name1">Contact name</string>
    <string name="drop_off_contact">Dropoff Details</string>
    <string name="what_is_being">Tell us about the item(s)</string>
    <string name="request">REQUEST</string>
    <string name="contacts">Contacts</string>
    <string name="search_contact">Search Contact</string>
    <string name="no_notifications_available">No Notifications Available</string>
    <string name="clear_all">Clear All</string>
    <string name="do_you_really_delete">Do you really want to DELETE All Notifications?</string>
    <string name="do_you_really_cancel">Do you really want to CANCEL the Trip?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="gps_network_not_enabled">Location service is not enabled</string>
    <string name="open_location_settings">Settings</string>
    <string name="your_invite_code">Your Invite Code</string>
    <string name="copy">Copy</string>
    <string name="invite">INVITE</string>
    <string name="want_port_for_less">Want more Whizzy for less?</string>
    <string name="give_friends_free_credit">Give friends free credit to try port.</string>
    <string name="share_using">Share Using</string>
    <string name="location_name">Location Name</string>
    <string name="enter_location_name">Enter Location Name (Ex: office)</string>
    <string name="lwh">L/W/H</string>
    <string name="min_fare">FARE</string>
    <string name="weight">WEIGHT</string>
    <string name="next">Next</string>
    <string name="save_next">Save and Next</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="crash_toast_text">Crash</string>
    <string name="loading">Loading.....</string>
    <string name="trip_type">Trip Type</string>
    <string name="looking_for_drivers">Looking For Whizzers…</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="crn">CRN</string>
    <string name="rating">Rating</string>
    <string name="car_name">Car Name</string>
    <string name="car_number">AP21 EG 1112</string>
    <string name="cancel_options">Please choose a cancel reason</string>
    <string name="rate_exp_sofar">Rate your experience so far</string>
    <string name="submit">Submit</string>
    <string name="rate_your_trip">Rate your experience</string>
    <string name="trip_summary">Request Summary</string>
    <string name="status">---- Status ----</string>
    <string name="completed">Completed</string>
    <string name="view_details"><u>View Details</u>.</string>
    <string name="view_trip_details"><u>View Request Details</u>.</string>
    <string name="fare_details">Get Fare Details</string>
    <string name="total_time">Total Time</string>
    <string name="total_distance">Total Distance</string>
    <string name="otp">OTP</string>
    <string name="trip_in_progress">Trip in Progress.....</string>
    <string name="payment">Pay Now</string>
    <string name="me">It\'s me</string>
    <string name="trip_details">Request Details</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="price">price</string>
    <string name="mode">Mode</string>
    <string name="description">Description</string>
    <string name="receipt">Receipt</string>
    <string name="driver_name">Driver Name</string>
    <string name="title_activity_fare_details">FareDetailsActivity</string>
    <string name="closee">Close</string>
    <string name="sgst">SGST</string>
    <string name="cgst">CGST</string>
    <string name="base_fare">Base Fare</string>
    <string name="from_me"><u>Pick from me</u></string>
    <string name="to_me"><u>Drop to me</u></string>
    <string name="flat_landmark">Landmark(Optional)</string>
    <string name="landmark1">Landmark</string>
    <string name="landmark">Flat No. / Door No.(Optional)</string>
    <string name="coupnhint">Have a coupon? Enter it here</string>
    <string name="applycoupon">Apply coupon code</string>
    <string name="applied">Coupon Applied..</string>
    <string name="apply">APPLY</string>
    <string name="delete">REMOVE</string>
    <string name="call">Call</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="continue_u"><u>Continue</u></string>
    <string name="continue1">Continue</string>
    <string name="save_continue">Save and Continue</string>
    <string name="start_saving_time">Request Now</string>
    <string name="cash">Cash</string>
    <string name="about_text">Whizzy allows you, an individual or a business,to avoid unnecessary time and money that is typically spent in traffic in order to run errands or deliver goods to customers.\n\nWhizzy provides a convenient platform to summon a person and vehicle on demand that meets your specific requirements. It is like having a domestic help and/or a driver at your service on the click of a button.</string>
    <string name="about_text1">Currently we are operating in Hyderabad city only.</string>
    <string name="faq">FAQ</string>
    <string name="add_photo">Add Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="use_from_gallery">Use from Gallery</string>
    <string name="cannot_cancel">"Cancellation not allowed. You cannot cancel now as the Whizzer is enroute serving your request." Please contact Whizzer.</string>
    <string name="item_back">If you need your item back, Please contact driver</string>
    <string name="dismiss">Dismiss</string>
    <string name="call_driver">Call</string>
    <string name="problem_getting_otp">OTP not received?</string>
    <string name="call_otp">Call for OTP</string>
    <string name="pickup_details">Pickup Details</string>
    <string name="drop_details">Drop Details</string>
    <string name="title">Show a title</string>
    <string name="no_whizzers">No Whizzers available at the moment</string>
    <string name="tell_us">Please tell us what to do</string>
    <string name="keep_looking">Let our agents try</string>
    <string name="try_again">Let me try again</string>
    <string name="cancel1"><u>Cancel</u></string>
    <string name="name">Name</string>
    <string name="my_saved_add">My Saved Addresses</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
</resources>