<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <TextView android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/add_photo"
        android:textColor="@color/text_color"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_color" />

    <TextView
        android:id="@+id/take_photo"
        android:layout_width="200dp" android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_blue"
        android:padding="10dp"
        android:text="@string/take_photo"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/gallery"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp" android:gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/button_blue"
        android:padding="10dp"
        android:text="@string/use_from_gallery"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp" android:gravity="center"
        android:layout_marginRight="40dp" android:layout_marginTop="2dp" android:layout_marginBottom="2dp"
        android:background="@drawable/button_blue"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>