<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/fare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:padding="2dp"
        android:text="@string/base_fare"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/to_location"
        android:layout_alignRight="@+id/to_location"
        android:layout_alignParentTop="true"
        android:padding="2dp"
        android:text="@string/whizzy"
        android:textColor="@color/text_color" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/empty"
        android:src="@drawable/from_to" />

    <TextView
        android:id="@+id/from_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_toEndOf="@+id/image"
        android:layout_toRightOf="@+id/image"
        android:background="@color/lighter_gray"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="5dp"
        android:text="@string/pickup_details"
        android:textColor="@color/text_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/to_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from_location"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_toEndOf="@+id/image"
        android:layout_toRightOf="@+id/image"
        android:background="@color/lighter_gray"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="5dp"
        android:text="@string/drop_details"
        android:textColor="@color/text_color"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="58dp"
        android:contentDescription="@string/empty"
        android:src="@drawable/ic_arrow_right" />
</RelativeLayout>