<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/popup_bg"
    android:paddingLeft="30dp"
    android:paddingTop="10dp"
    android:paddingRight="30dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="New Text"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/verification_code"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/popup_bg"
        android:gravity="center"
        android:hint="@string/otp"
        android:inputType="number"
        android:maxLength="10"
        android:padding="10dp" />

    <Button
        android:id="@+id/ok"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verification_code"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_blue"
        android:padding="8dp"
        android:text="@string/confirm"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ok"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/resend_otp"
            android:textColor="@drawable/resend_bg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_blue" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resend"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/problem_getting_otp"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/call_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue"
            android:padding="10dp"
            android:text="@string/call_otp"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>