<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="20dp"
        android:text="@string/location_name"
        android:textColor="#353535"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/location_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:hint="@string/enter_location_name"
        android:padding="10dp" />

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1dp"-->
    <!--android:background="#C3C3C3" />-->

    <Button
        android:id="@+id/continuee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_blue"
        android:padding="15dp"
        android:text="@string/continue_u"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
</LinearLayout>