<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/popup_bg"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="20dp"
    android:paddingRight="30dp"
    android:paddingBottom="20dp">

    <!--<TextView-->
    <!--android:id="@+id/text"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="20dp"-->
    <!--android:gravity="center"-->
    <!--android:text="@string/verification_code"-->
    <!--android:textSize="20sp" />-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/no_whizzers"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/tell_us"
        android:textColor="@color/text_color"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/on_behalf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_blue"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/keep_looking"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_blue"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/try_again"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/cancel1"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp" />

    <!--<Button-->
    <!--android:id="@+id/resend"-->
    <!--android:layout_width="100dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/ok"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="12dp"-->
    <!--android:background="@color/transparent"-->
    <!--android:text="@string/resend_otp"-->
    <!--android:textColor="@color/blue" />-->

    <!--<TextView-->
    <!--android:layout_width="80dp"-->
    <!--android:layout_height="1dp"-->
    <!--android:layout_below="@+id/resend"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginBottom="5dp"-->
    <!--android:background="@color/blue" />-->

</LinearLayout>